# semantic-qa-gen

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
QAGenProject/config/: system-dsave.yaml  system.yaml
QAGenProject/config/prompts/: analysis_prompts.yaml  validation_prompts.yaml
QAGenProject/config/prompts/Educator Example Templates/: analysis_prompts.yaml  question_prompts.yaml  summarization_prompts.yaml  validation_prompts.yaml
QAGenProject/config/prompts/Military Training Documents Example Templates/: analysis_prompts.yaml  question_prompts.yaml  summarization_prompts.yaml  validation_prompts.yaml
QAGenProject/config/prompts/Technical Example Templates/: question_prompts.yaml  summarization_prompts.yaml
src/: main.py
src/semantic_qa_gen/: __init__.py  semantic_qa_gen.py  version.py
src/semantic_qa_gen/chunking/: __init__.py  analyzer.py  engine.py
src/semantic_qa_gen/chunking/strategies/: __init__.py  base.py  fixed_size.py  nlp_helpers.py  semantic.py
src/semantic_qa_gen/cli/: __init__.py  commands.py
src/semantic_qa_gen/config/: __init__.py  manager.py  schema.py
src/semantic_qa_gen/document/: __init__.py  models.py  processor.py
src/semantic_qa_gen/document/loaders/: __init__.py  base.py  docx.py  markdown.py  pdf.py  text.py
src/semantic_qa_gen/llm/: __init__.py  router.py  service.py
src/semantic_qa_gen/llm/adapters/: __init__.py  base.py  local.py  openai_adapter.py  remote.py
src/semantic_qa_gen/llm/prompts/: __init__.py  manager.py
src/semantic_qa_gen/llm/prompts/templates/: analysis_prompts.yaml  decontextualize_prompts.yaml  generation_prompts.yaml  validation_prompts.yaml
src/semantic_qa_gen/output/: __init__.py  formatter.py
src/semantic_qa_gen/output/adapters/: __init__.py  csv.py  json.py  jsonl.py
src/semantic_qa_gen/pipeline/: __init__.py  semantic.py
src/semantic_qa_gen/question/: __init__.py  generator.py  processor.py
src/semantic_qa_gen/question/filters/: __init__.py  leak_filter.py
src/semantic_qa_gen/question/validation/: __init__.py  base.py  decontextualizer.py  diversity.py  engine.py  factual.py
src/semantic_qa_gen/utils/: __init__.py  checkpoint.py  error.py  logging.py  progress.py  project.py
tests/: conftest.py  test_chunking.py  test_config.py  test_decontextualization.py  test_document_processor.py  test_leak_filter.py  test_llm_service.py  test_main.py  test_pipeline.py  test_prompt_materialize.py  test_question_generation.py  test_utils.py  test_validation.py
tests/integration/: test_minimal_pipeline.py
